# sufe-ds-courses

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTIONS.md  LICENSE  README.md
密谈/Python程序设计/trans-tts/trans-tts/: main.py  pyproject.toml
密谈/Python程序设计/trans-tts/trans-tts/config/: baidu.toml  llm.toml
密谈/Python程序设计/trans-tts/trans-tts/pre/: gp13.pptx
密谈/Python程序设计/trans-tts/trans-tts/text/: Also sprach Zarathustra.txt
密谈/Python程序设计/trans-tts/trans-tts/trans/: baidu.py  base.py  lang.py  llm.py
密谈/Python程序设计/实验/: AAPL.xml  S&P 500 Historical Data.csv  data_preprocess_1.ipynb  data_preprocess_2.ipynb
密谈/Python程序设计/解析/: exam_demo.ipynb  python模拟试卷答案.docx  test.xlsx
密谈/人工智能/FlappyBird/: README.md  bot.py  main.py  pyproject.toml
密谈/军事理论/笔记/: 军事理论.md
密谈/数值计算方法/作业/: homework.typ
密谈/数据库/作业/: dept_emp.sql
密谈/概率论/作业/: homework.typ  week 01.typ  week 02.typ  week 03.typ  week 04.typ  week 05.typ  week 06.typ  week 07.typ  week 08.typ  week 09.typ  week 10.typ  week 11.typ
密谈/毛泽东思想和中国特色社会主义理论体系概论/作业/: main.md  main.typ  main_v1.typ  refs.bib
密谈/程序设计基础/2023秋期末/: 1.cpp  2.cpp  2023-程序设计基础-解析.md  3.cpp  4.cpp  5.cpp  6.cpp
密谈/程序设计基础/类的补充/: README.md  data.cpp  data.h  main.cpp
密谈/算法设计与分析/笔记/: ch01.typ  ch02.typ  ch03.typ  ch04.typ  ch05.typ  ch06.typ  ch07.typ  ch08.typ  main.typ  util.typ
密谈/计算机组成原理/作业/: template.typ  tmp.md
密谈/计算机组成原理/笔记/: cp5.typ  tmp.md
密谈/跟随作曲家听音乐/作业/: homework.typ
密谈/金融工程学/: README.md
密谈/高级机器学习理论与算法/作业/aml/: main.ipynb  pyproject.toml
密谈/高级机器学习理论与算法/作业/aml/docs/: main.typ  作业1.docx
课程资料/金融工程学/: README.md
(+352 files in other folders)
