[project]
name = "aml-01"
version = "0.1.0"
description = "高级机器学习第一次作业"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
    "xgboost>=3.1.1",
]

[dependency-groups]
dev = ["ipykernel>=7.1.0", "jupyter>=1.1.1", "jupyter-ruff>=0.3.0"]
